--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EDELINE: Enhancing Memory in Diffusion-based World Models via Linear-Time Sequence Modeling</title>
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ljh-coding.github.io/EDELINE/">
+  <meta property="og:title" content="EDELINE: Enhancing Memory in Diffusion-based World Models via Linear-Time Sequence Modeling">
+  <meta property="og:description" content="EDELINE combines diffusion models with state space models to create a world model for reinforcement learning that overcomes memory limitations in previous approaches.">
+  <meta property="og:image" content="https://ljh-coding.github.io/EDELINE/static/images/preview.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://ljh-coding.github.io/EDELINE/">
+  <meta property="twitter:title" content="EDELINE: Enhancing Memory in Diffusion-based World Models via Linear-Time Sequence Modeling">
+  <meta property="twitter:description" content="EDELINE combines diffusion models with state space models to create a world model for reinforcement learning that overcomes memory limitations in previous approaches.">
+  <meta property="twitter:image" content="https://ljh-coding.github.io/EDELINE/static/images/preview.jpg">
+
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
 
